deploy/manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
  labels:
    env: prod
