deploy/manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
  labels:
    env: prod
